--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,27 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    signingConfigs {
+        debug {
+            keyAlias 'julu01'
+            keyPassword 'julu01'
+            storePassword 'julu01'
+            storeFile file('/Users/binu/final.jks')
+        }
+        release {
+            keyAlias 'julu01'
+            keyPassword 'julu01'
+            storePassword 'julu01'
+            storeFile file('/Users/binu/final.jks')
+        }
+    }
+    compileSdkVersion 23
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "it.jaschke.alexandria"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -36,6 +50,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.android.support:design:23.0.1'
 
 }
